--- a/templates/index.html
+++ b/templates/index.html
@@ -219,7 +219,7 @@
                 $('#' + user + ' .btn-check').removeClass("disabled");
                 add_click_handler();
             } else {
-                $('#' + user + " .time_wrapper").html("Connection to " + computer + " failed. Off? Conf.py wrong");
+                $('#' + user + " .time_wrapper").html("Connection to " + computer + " failed. Off? Conf.py wrong? Bad Auth?");
                 $('#' + user + " .notify").addClass("error").html("Error");
             }
         }
